--- a/index.html
+++ b/index.html
@@ -7,21 +7,44 @@
         <meta name="description" content="Nicolas Petras's Personal Website - Developer and Computer Science student">
         <meta name="author" content="Nicolas Petras">
 
-        <link rel="stylesheet" href="css/styles.css?v=1.0">
+        <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css">
     </head>
 
-    <body>
-        <header>
+    <body class="container-fluid">
+        
+        <header class="row">
 
         </header>
-        <nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Features</a>
+                <a class="nav-item nav-link" href="#">Pricing</a>
+                <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </div>
+            </div>
+          </nav>
 
-        </nav>
+        <main class="row">
+            <div class="jumbotron col-12">
+                <h1 class="display-4">Hello, world!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+              </div>
 
-        <main>
-            <h1>About Me</h1>
-            <p>This is my personal website</p>
+              <div class="col-12">
+                <h1>About Me</h1>
+                <p>This is my personal website</p>
+            </div>
         </main>
+
         <!-- Social Media Links -->
         <footer></footer>
     </body>
