Added education content and started on industrial experience

--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
         <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
-  </div>
+  </div> -->
 </nav>
 
 <main role="main" class="container">
-
   <div class="starter-template">
     <h1>Hello World!</h1>
     <p class="lead">Welcome to my personal website, I am a Computer Science student and <br> Software Engineer. Interested in all things tech.</p>
@@ -69,21 +68,30 @@
 
   <div>
       <h2>Education</h2>
-      <h3>St Andrews University, Computer Science MSc</h3>
+      <h5>Computer Science MSc, University of St Andrews</h5>
+      <h6>September 2021 - Present</h6>
       <ul>
-          <li>1</li>
+        <li>Due to begin my Masters at the University of St Andrews in September 2021</li>
       </ul>
-      <h3>Aberystwyth University, Computer Science BSc</h3>
+
+      <h5>Aberystwyth University, Computer Science BSc</h5>
+      <h6>September 2017 - June 2021</h6>
       <ul>
-        <li>1</li>
-    </ul>
+        <li>Achieved a <strong>first‑class honours</strong> with a 78% cascade average.</li>
+        <li>Notable Modules: Data Structures and Algorithms (<strong>93%</strong>), Artificial Intelligence (85%), Advanced Algorithms (78%) and Machine Learning (72%)</li>
+        <li>Completed a Machine Learning Major Project in ‘Predicting Stock Market Trends from News Headlines’, achieving a mark of 63%</li>
+      </ul>
     </div>
 
     <div>
         <h2>Industry Experience</h2>
-        <h3>Amadeus Germany</h3>
+        <h5>Amadeus Germany</h3>
+        <h6>July 2019 - August 2020</h6>
         <ul>
-            <li>1</li>
+            <li>I completed a 13 month industrial year placement at Amadeus Germany in the German Backend DevOps team</li>
+            <li>During this placement I got to apply the theoritical and pratical skills gained during the first two years of my studies in a real-world industrial setting</li>
+            <li>I gained experience in a variety of disciplines: software development, system adminstration, quality assurance, and operations; and 
+              technologies: Kotlin, Java, Spring, Angular, Docker, OpenStack and more</li>
         </ul>
       </ul>
     </div>
